commit 89a2f5de549cecfaeba3e4352f00502bac6d78d0
Date:   Fri May 8 19:11:23 2015 +0300

    Sending and receiving with PyZmq both now work.

commit 81fff96b785fd33b9a026323b10f4d346e9a0aa0
Date:   Fri May 8 16:41:34 2015 +0300

    Refactored the PyZmq to be more like OTMql4ZMQP.
    It's working fine for Mt4 sending tick, bar and timer events.
    Added a script bin/OTZmqPublish.py to test publishing messages
    back to PyZmq Mt4 - not working yet.

commit 03a50d15fad1d8d6c28bcbdc508c2668f663fc69
Date:   Thu May 7 00:53:42 2015 +0300

    Refactored the Simple message format.

commit 25ab5d7e6c2fb5966a04707010c8c3fd8bb1bcc3
Date:   Wed May 6 16:33:07 2015 +0300

    Added MQL4/Python/OTMql427/ZmqChart.py to make a chart abstraction
    that uses zmq.

commit b3c408c7505cf9871782ba4c562ddc849588a9ad
Date:   Tue May 5 19:51:51 2015 +0300

    Documented that we are having problems with the receiving of messages.

commit 86ce2c3f676047edccb10081afa71e1ec628e56a
Date:   Sat May 2 14:46:19 2015 +0300

    Trying with pyzmq under OTMql4Py. Still having problems with
    crashing Mt4 on receive. For a demo expert, see
    MQL4/Experts/OTMql4/OTPyTestZmqEA.mq4

commit 6126dc3610e11e2b3b703e10783e0bc8c7e49147
Date:   Sat May 2 14:32:24 2015 +0300

    Moved MQL4/Include/OTMql4/OTZmqBarInfo.mqh to
    OTMql4LibMQL4/Include/OTMql4/OTBarInfo.mqh
    so it can be used by other projects.

commit 1193b5a63e27d0cfc2c693cf534f7104440a342c
Date:   Thu Apr 23 17:00:42 2015 +0300

    Refactored OTLibProcessCmd.mqh into OTLibMt4ProcessCmd.mqh
    and OTZmqProcessCmd.mqh to make it easier for people to reuse
    ProcessCmd with the OT additions, and to extend it to handle
    their own additions.

commit eaf9f462acecf460f088055d581148f0d4d37445
Date:   Wed Apr 22 14:22:37 2015 +0300

    Renamed  bin/OTZmqPublish.py to bin/OTZmqRequest.py
    to eliminate some confusion in the code. The
    socket to get information from Metatrader is a REQ/REP socket.
